Fixed CSS so that top row is not cut off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,5 +18,5 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    
 }
